--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-# Default ignored files
-/shelf/
-/.idea/workspace.xml
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
@@ -41,16 +38,14 @@ hs_err_pid*
 replay_pid*
 /out/
 target
-
+.idea
 *.iml
-*.idea/compiler.xml
-
 
 #project
-#data.properties
+data.properties
 
 #allure
-
-
+.allure
+allure-results
 
 test-output
